--- a/example/infinite_horizontal_scroll/infinite_horizontal_scroll.html
+++ b/example/infinite_horizontal_scroll/infinite_horizontal_scroll.html
@@ -1,6 +1,5 @@
-
 <!-- see template horizontal -->
-<div class="slideshow basic">
+<div class="slideshow infinite_horizontal_scroll">
 
     <a href="#" class="button first"></a>
     <a href="#" class="button previous"></a>
@@ -11,21 +10,49 @@
     <a href="#" class="button next"></a>
     <a href="#" class="button last"></a>
 
+    <div class='loader'></div>
+
     <div class='scroller'>
         <div>
-            <div>HTML Content1</div>
-            <div>HTML Content2</div>
-            <div>HTML Content3</div>
-            <div>HTML Content4</div>
-            <div>HTML Content5</div>
-            <div>HTML Content6</div>
-            <div>HTML Content7</div>
-            <div>HTML Content8</div>
-            <div>HTML Content9</div>
-            <div>HTML Content10</div>
-            <div>HTML Content11</div>
-            <div>HTML Content12</div>
-            <div>HTML Content13</div>
+            <div>
+                <img src='./slide/1.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/2.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/3.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/4.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/5.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/6.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/7.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/8.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/9.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/10.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/11.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/12.jpg' alt="">
+            </div>
+            <div>
+                <img src='./slide/13.jpg' alt="">
+            </div>
         </div>
     </div>
 
@@ -54,4 +81,5 @@
             <a href="#" class="button last"></a>
         </div>
     </div>
+
 </div>
