--- a/site/basic/basic.html
+++ b/site/basic/basic.html
@@ -35,7 +35,7 @@
         <a href="#" class="previous">&nbsp;</a>
         <div class='scroller'>
             <div>
-                <a href="#">Nav1</a>
+                <!--<a href="#">Nav1</a>
                 <a href="#">Nav2</a>
                 <a href="#">Nav3</a>
                 <a href="#">Nav4</a>
@@ -47,7 +47,7 @@
                 <a href="#">Nav10</a>
                 <a href="#">Nav11</a>
                 <a href="#">Nav12</a>
-                <a href="#">Nav13</a>
+                <a href="#">Nav13</a>-->
             </div>
         </div>
         <a href="#" class="next">&nbsp;</a>
