--- a/site/nav/nav.html
+++ b/site/nav/nav.html
@@ -1,11 +1,17 @@
-
-<div class="slideshow basic">
+<!-- see template horizontal -->
+<div class="slideshow nav">
 
     <div class="player">
+        <a href="#" class="first">&nbsp;</a>
         <a href="#" class="previous">&nbsp;</a>
+        <a href="#" class="play">&nbsp;</a>
+        <a href="#" class="pause">&nbsp;</a>
+        <a href="#" class="resume">&nbsp;</a>
+        <a href="#" class="stop">&nbsp;</a>
         <a href="#" class="next">&nbsp;</a>
+        <a href="#" class="last">&nbsp;</a>
     </div>
-    
+
     <div class='pad'>
         <div class='scroller'>
             <div class='slides'>
@@ -24,5 +30,16 @@
                 <div><p>HTML Content13</p><p>Center vertically</p></div>
             </div>
         </div>
+    </div>
+
+    <div class='navigation'>
+        <a href="#" class="first">&nbsp;</a>
+        <a href="#" class="previous">&nbsp;</a>
+        <div class='scroller'>
+            <div>
+            </div>
+        </div>
+        <a href="#" class="next">&nbsp;</a>
+        <a href="#" class="last">&nbsp;</a>
     </div>
 </div>
