--- a/site/slideshow/progress.html
+++ b/site/slideshow/progress.html
@@ -54,10 +54,10 @@
     $mask_controls_hover : <span class="string">'&lt;'</span>,
     $mask_progress_hover : <span class="string">'&lt;'</span>,
     
-    mask_progress_load : <span class="literal">false</span>,
-    mask_progress_transition : <span class="literal">false</span>,
+    mask_progress_load : <span class="literal">true</span>,
+    mask_progress_transition : <span class="literal">true</span>,
     
-    delay : <span class="number">10000</span>,
+    delay : <span class="number">1000</span>,
 
     transition : <span class="keyword">new</span> $.JocodeSlideshowTransition.Scroll({
         duration : <span class="number">500</span>,
