--- a/site/slideshow/nav.html
+++ b/site/slideshow/nav.html
@@ -66,8 +66,8 @@
 
     $slides : <span class="string">'&gt; .pad &gt; .scroller &gt; .slides &gt; div'</span>,
     $controls : <span class="string">'&gt; .player'</span>,
-    $pause_hover : <span class="string">'&lt;'</span>,
-    $mask_progress_hover : <span class="string">'&lt;'</span>,
+    $pause_hover : <span class="string">'.pad, .navigation'</span>,
+    $mask_progress_hover : <span class="string">'.pad, .navigation'</span>,
     
     mask_progress_load : <span class="literal">false</span>,
     mask_progress_transition : <span class="literal">false</span>,
@@ -302,6 +302,7 @@
         <span class="class">.slideshow</span><span class="class">.nav</span> &gt; <span class="class">.navigation</span> &gt; <span class="class">.scroller</span><span class="rules">{
             <span class="rule"><span class="attribute">width </span>:<span class="value"> <span class="number">378</span>px;</span></span>
             <span class="rule"><span class="attribute">overflow</span>:<span class="value"> hidden;</span></span>
+            <span class="rule"><span class="attribute">position </span>:<span class="value"> relative;</span></span>
         <span class="rule">}</span></span>
         <span class="class">.slideshow</span><span class="class">.nav</span> &gt; <span class="class">.navigation</span> &gt; <span class="class">.scroller</span> &gt; <span class="tag">div</span><span class="rules">{
             <span class="rule"><span class="attribute">display</span>:<span class="value"> table;</span></span>
